added recaptch security

--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -28,6 +28,8 @@ error_resourcenotfound_problemdescription=Sorry, we did not find the resource yo
 error_uncaughtexception_title=Internal Error
 error_uncaughtexception_problemdescription=Sorry, we encountered an internal error.
 
+errors.badCaptcha=Please try again. Hover over the red buttons for additional options.
+
 #security
 security_login_title=Spring Security Login
 security_login_message=You have tried to access a protected area of this application. By default you can login as "admin", with a password of "admin".
