added validation logic

--- a/src/main/webapp/WEB-INF/i18n/messages_de.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_de.properties
@@ -25,8 +25,6 @@ error_resourcenotfound_problemdescription=Sorry, we did not find the resource yo
 error_uncaughtexception_title=Internal Error
 error_uncaughtexception_problemdescription=Sorry, we encountered an internal error.
 
-errors.badCaptcha=Please try again. Hover over the red buttons for additional options.
-
 #security
 security_login_title=Spring Security Login
 security_login_message=You have tried to access a protected area of this application. By default you can login as "admin", with a password of "admin".
@@ -48,6 +46,10 @@ label.password = Kennwort
 label.gender = Geschlecht
 label.country = Land
 label.word_verification = Wortbestätigungsfeld
+
+emailAddress.mismatch=Email addresses does not match
+name.already_exists=User Name is not available
+errors.badCaptcha=Please try again. Hover over the red buttons for additional options.
 
 title.chesslinks=Chess Favourite Links
 
