--- a/src/main/webapp/WEB-INF/i18n/messages_en.properties
+++ b/src/main/webapp/WEB-INF/i18n/messages_en.properties
@@ -28,8 +28,6 @@ error_resourcenotfound_problemdescription=Sorry, we did not find the resource yo
 error_uncaughtexception_title=Internal Error
 error_uncaughtexception_problemdescription=Sorry, we encountered an internal error.
 
-errors.badCaptcha=Please try again. Hover over the red buttons for additional options.
-
 #security
 security_login_title=Spring Security Login
 security_login_message=You have tried to access a protected area of this application. By default you can login as "admin", with a password of "admin".
@@ -42,15 +40,19 @@ security_logout=Logout
 
 application_name=Chess
 
-label.firstname = First Name
-label.lastname = Last Name
-label.email = Email Address
-label.reenter_email = Reenter Email Address
-label.username = User Name
-label.password = Password
-label.gender = Gender
-label.country = Country
-label.word_verification = Word Verification
+label.firstname=First Name
+label.lastname=Last Name
+label.email=Email Address
+label.reenter_email=Reenter Email Address
+label.username=User Name
+label.password=Password
+label.gender=Gender
+label.country=Country
+label.word_verification=Word Verification
+
+emailAddress.mismatch=Email addresses does not match
+name.already_exists=User Name is not available
+errors.badCaptcha=Please try again. Hover over the red buttons for additional options.
 
 title.chesslinks=Chess Favourite Links
 
