--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -13,6 +13,7 @@ title_playChess=During my college days, I had developed a chess engine which pla
 title_voteChess=Vote chess is a voting game played between 2 teams. For e.g. if suppose we have two teams Anand's team and Carlsen's team. Anand's fan will join Anand Team and Carlsen's fan will join Carlsen Team. Each member of Anand's team will vote a move on Anand's turn. The most voted move is played on the board after 24 hours voting period. Similar is the case for Carlsen's Team. Team members can chat and analyze moves during the game. Public chat is also available as open forum.
 title_myGames=I am an avid chess lover and play chess tournaments frequently. After every tournament, I upload all my games on this page with my analysis. I would be happy to hear your comments on my games.
 title_iccVideos=Playing 1-minute game at <a href="http://www.chessclub.com" target="_blank">ICC</a> is my favourite hobby. My handle at ICC is <a href="http://www.chessclub.com/activities/finger.php?handle=vikas" target="_blank">vikas</a>. I have recorded few of my live games at ICC and uploaded them in youtube. I will keep updating more games to the list. I will be very pleased if you put your comments on my games at youtube.
+title_favouriteChessLinks=Favourite Chess Links
 title_myPhotos=My Photos
 title_familyPhotos=Family Photos
 
