converted to xsl

--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -15,8 +15,8 @@ title_voteChess=Vote chess is a voting game played between 2 teams. For e.g. if 
 title_myGames=I am an avid chess lover and play chess tournaments frequently. After every tournament, I upload all my games on this page with my analysis. I would be happy to hear your comments on my games.
 title_iccVideos=Playing 1-minute game at <a href="http://www.chessclub.com" target="_blank">ICC</a> is my favourite hobby. My handle at ICC is <a href="http://www.chessclub.com/activities/finger.php?handle=vikas" target="_blank">vikas</a>. I have recorded few of my live games at ICC and uploaded them in youtube. I will keep updating more games to the list. I will be very pleased if you put your comments on my games at youtube.
 title_favouriteChessLinks=Favourite Chess Links
-title_myPhotos=My Photos
-title_familyPhotos=Family Photos
+title_myPhotos=My photo album.
+title_familyPhotos=My family photo album.
 
 #dataAccessFailure_jspx
 error_dataaccessfailure_title=Data access failure
