--- a/src/main/resources/i18n/messages_de.properties
+++ b/src/main/resources/i18n/messages_de.properties
@@ -58,7 +58,7 @@ name.already_exists=User Name is not available
 errors.badCaptcha=Please try again. Hover over the red buttons for additional options.
 
 mail.activation=Dear {0} {1}, welcome to chessband.com \n\nclick or copy this link to your browser to activate your account:\n {2}/activate.htm?pid={3}&authKey={4} \n\nRegards\n\nVikas Sharma
-mail.forgotPassword=Forgot your password, {0} {1} \n\nWe received a request to reset the password for your account.\n\nTo reset your password, click on the link below (or copy and paste the URL into your browser):\n {2}/chessband/password_reset.htm?pid={3}&authKey={4} \n\nRegards\n\nVikas Sharma
+mail.resetPassword=Forgot your password, {0} {1} \n\nWe received a request to reset the password for your account.\n\nTo reset your password, click on the link below (or copy and paste the URL into your browser):\n {2}/reset_password.htm?pid={3}&authKey={4} \n\nRegards\n\nVikas Sharma
 
 title.chesslinks=Chess Favourite Links
 
