rating comparison chart added

--- a/src/main/resources/i18n/messages_en.properties
+++ b/src/main/resources/i18n/messages_en.properties
@@ -17,6 +17,7 @@ title_favouriteChessLinks=Favourite Chess Links
 title_technology=Technology questions 
 title_myPhotos=My photo album.
 title_familyPhotos=My family photo album.
+title_ratingComparisonChart=Compares rating of top grand masters.
 
 #dataAccessFailure_jspx
 error_dataaccessfailure_title=Data access failure
